syntax = "proto3";

package pb;

import "rpc_create_user.proto";
import "rpc_login_user.proto";

option go_package="github.com/anil1226/go-simplebank-grpc/pb";

service SimpleBank {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse){

    }
    rpc LoginUser (LoginUserRequest) returns (LoginUserResponse){
        
    }
}